attempting to fix light and dark mode button

--- a/ChromeExtension/popup.css
+++ b/ChromeExtension/popup.css
@@ -13,13 +13,19 @@ button {
   cursor: pointer;       
   text-transform: uppercase;
 }
-button1 {
+.button1 {
   background-color: white;
   color: black;
   border: 2px solid #008CBA;
+  padding-right: 10px;
+  text-align: center;
+  font-size: 10px;
+  width: 10px;
+  height: 10px;
+  margin-left: 20px;
  }
 
-button1 :hover {    
+.button1 :hover {    
 
    background-color: #008CBA;      
    color: white; 
